<resources>
    <string name="app_name">M6Frontend</string>
    <string name="empty"> </string>
    <string name="add_event_caption">Event Name</string>
    <string name="location_caption">Location</string>
    <string name="description_caption">Event Description</string>
    <string name="add_users_caption">Add Users</string>
    <string name="start_datetime_caption">Start Time</string>
    <string name="end_datetime_caption">End Time</string>
    <string name="add_event_btn_caption">Add Event</string>
    <string name="date_hint">Date</string>
    <string name="time_hint">Time</string>
    <string name="token_prefix">Token: %s</string>
    <string name="handle_notification_now">Test Notification</string>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyC6aRfD_pXQzDHUDvLYok0IL6h58ARh5MI</string>
    <string name="find_event_caption">Find Events</string>
    <string name="event_name">Event: </string>
    <string name="event_owner_picture">eventOwnerPicture </string>
    <string name="eventInterestButton">eventInterestButton</string>
    <string name="signInFailedToast">Sign In Failed</string>


    <string-array name="event_name">
        <item>ID: </item>
        <item>Description: </item>
        <item>Start: </item>
        <item>End: </item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="private_title">Private Profile</string>
    <string name="private_summary_on">Hides location and email from friends
    </string>
    <string name="private_summary_off">Shows location and email from friends</string>

    <!-- Navigation Drawer -->
    <string name="nav_profile">Profile</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_groups">Groups</string>
    <string name="nav_browse_users">Browse Users</string>
    <string name="nav_my_events">My Events</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Profile</item>
        <item>Friends</item>
        <item>Groups</item>
        <item>Browse Users</item>
        <item>My Events</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="profilepicture">profilePicture</string>
    <string name="first_last">First Last</string>
    <string name="friends">Friends</string>
    <string name="_0">0</string>
    <string name="events">Events</string>
    <string name="save_profile">Save Profile</string>
    <string name="message">Message</string>

    <string name="login_email">kellywong48357@gmail.com</string>
    <string name="friend_requests">Friend Requests</string>

</resources>