...
        <include
            layout="@layout/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/main_drawer">
...

        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:backgroundTint="#663F51B5"
        android:foregroundGravity="top"
        android:text="Sign out"
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/eventButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:backgroundTint="#6603A9F4"
        android:foregroundGravity="top"
        android:text="@string/add_event_btn_caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/find_events_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <Button
...
